--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,11 @@
 name: Main
 
-on: push
-workflow_dispatch:
+on: 
+  push:
+    branches:
+      - "main"
+  workflow_dispatch:
+  
 permissions:
   contents: write
 jobs:
