--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "main"
+    tags:
+      - 'v*'
   workflow_dispatch:
   
 permissions:
@@ -25,6 +27,7 @@ jobs:
             WITH_V: true
       - name: Release
         uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with:
           files: Release.txt
           generate_release_notes: true
