--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
       - name: Test
         run: cat Release.txt
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
+        uses: mathieudutour/github-tag-action@v6.2
+        if: github.ref == 'refs/heads/main'
         id: tagger
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
-            WITH_V: true
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: minor
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
